added google next-auth, daisyui, login signup page

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # testing
 /coverage
 
+client_secret_661221978118-01m5vtjcam14hk7p6985s3dj0sq45hek.apps.googleusercontent.com
 # next.js
 /.next/
 /out/
@@ -32,6 +33,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+.env.local
 # vercel
 .vercel
 
